--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
 title:            Hyde
@@ -14,15 +13,6 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 
 url: "https://njrogers.github.io" 
 
-
-author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
-
-paginate:         5
-
-# Custom vars
-version:          2.1.0
-
-github:
-  repo:           https://github.com/poole/hyde
+gems:                [jekyll-paginate]
+paginate:            5
+paginate_path:       "page:num"
