test slate theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,5 @@
-# Dependencies
-markdown:         redcarpet
-highlighter:      pygments
-
-# Permalinks
-permalink:        pretty
-
-# Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-baseurl: "/" # the subpath of your site, e.g. /blog
-
-url: "https://njrogers.github.io" 
-
-gems:                [jekyll-paginate]
-paginate:            5
-paginate_path:       "page:num"
+title: Slate theme
+description: Slate is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-slate
